--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   display: none;
 } */
 
-#crsr {
+/* #crsr {
   height: 2.2vw;
   width: 2.2vw;
   border-radius: 50%;
@@ -27,7 +27,7 @@ body {
   z-index: 999;
   mix-blend-mode: difference;
   transform: translate(-50%, -50%);
-}
+} */
 
 #loader {
   height: calc(100vh + 1px);
@@ -126,7 +126,7 @@ body {
 
 #main {
   position: relative;
-  background-color: #030303;
+  background-color: #151515;
 }
 
 #page1 {
@@ -140,7 +140,7 @@ body {
   justify-content: center;
   grid-template-columns: 1fr 2fr 1fr;
   padding: 2.7vw 0;
-  height: 4;
+  height: max-content;
   max-width: 90%;
   margin: auto;
 }
@@ -211,7 +211,7 @@ body {
 
 #page2 {
   height: 100vh;
-  padding-top: 6vh;
+  padding-top: 7vh;
   background-color: #151515;
   position: relative;
 }
@@ -252,4 +252,91 @@ body {
   height: 100%;
   width: 100%;
   object-fit: cover;
+}
+
+#page3 {
+  min-height: 100vh;
+  width: 100%;
+  background-color: #151515;
+}
+#page4 {
+  min-height: 100vh;
+  width: 100%;
+  padding-top: 5vh;
+  background-color: #151515;
+  position: relative;
+}
+
+#page4-content {
+  height: max-content;
+  width: calc(100% - 27%);
+  position: relative;
+  left: 27%;
+}
+
+#page4-content h1 {
+  font-size: 7.3vw;
+  text-transform: uppercase;
+}
+
+#underline {
+  height: 2px;
+  width: 100%;
+  margin: 5vw 0;
+  border-radius: 10px;
+  background-color: #575757;
+}
+
+#page4-content > p {
+  font-size: 2.05vw;
+  width: 51%;
+  margin-bottom: 3vw;
+}
+
+#page4-flex {
+  display: flex;
+  gap: 2.5vw;
+}
+
+#page4-flex img {
+  width: 47%;
+  height: auto;
+}
+
+#page4-flex p {
+  width: 25%;
+  font-size: 1vw;
+}
+
+#page4-blue-div {
+  width: 50%;
+  padding: 3vw;
+  background-color: #3f7df4;
+  position: relative;
+  left: 34%;
+  margin-top: -37vh;
+}
+
+.blue-div-elem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5vw 0;
+  border-bottom: 1px solid #ffffff94;
+}
+
+.blue-div-elem h4 {
+  font-size: 1.4vw;
+  font-weight: 300;
+}
+
+.blue-div-elem p {
+  width: 40%;
+  font-size: 0.7vw;
+}
+
+#page5 {
+  height: 100vh;
+  width: 100%;
+  background-color: #151515;
 }
