--- a/style.css
+++ b/style.css
@@ -19,15 +19,11 @@ body::-webkit-scrollbar {
   display: none;
 }
 
-#crsr {
-  height: 2.2vw;
-  width: 2.2vw;
-  border-radius: 50%;
-  border: 1px solid rgb(255, 255, 255);
-  position: fixed;
-  z-index: 999;
+.mousefollower {
+  border: 2px solid rgb(255, 255, 255);
+  background-color: white;
+  scale: 2;
   mix-blend-mode: difference;
-  transform: translate(-50%, -50%);
 }
 
 #loader {
@@ -130,9 +126,12 @@ body::-webkit-scrollbar {
 }
 
 #page1 {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background-color: #151515;
+  /* margin-bottom: 10vh; */
+  padding-bottom: 13vh;
+  position: relative;
 }
 
 #navbar {
@@ -175,7 +174,7 @@ body::-webkit-scrollbar {
 }
 
 .hero {
-  width: max-content;
+  width: 72%;
   padding-left: 10%;
   margin-left: 17%;
   height: fit-content;
@@ -183,7 +182,7 @@ body::-webkit-scrollbar {
   display: flex;
   align-items: center;
   position: relative;
-  z-index: 9999;
+  z-index: 99;
 }
 
 .hero:nth-child(2) {
@@ -224,9 +223,10 @@ body::-webkit-scrollbar {
 }
 
 #page2 {
-  height: 100vh;
-  padding-top: 7vh;
-  background-color: #151515;
+  min-height: 100vh;
+  width: 100%;
+  padding: 20vh 0;
+  margin-bottom: 30vh;
   position: relative;
 }
 
@@ -249,30 +249,158 @@ body::-webkit-scrollbar {
 }
 
 #video-container {
-  height: 70vh;
+  height: 80vh;
   width: calc(100% - 27%);
   position: relative;
   left: 27%;
-}
-#video-container img {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: calc(100% + 1px);
-  object-fit: cover;
+  background: url(./public/video_thumbnail.jpg);
+  background-position: center;
+  background-size: cover;
 }
 
 #video-container video {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  opacity: 0;
 }
 
 #page3 {
   min-height: 100vh;
   width: 100%;
-  background-color: #151515;
+  position: relative;
+  padding: 17vh 2vw;
+  margin-bottom: 15vh;
+  /* margin-top: 25vh; */
 }
+
+#page3-content {
+  width: calc(100% - 27%);
+  position: relative;
+  left: 27%;
+}
+
+#page3-content h1 {
+  font-size: 7.3vw;
+  text-transform: uppercase;
+  position: relative;
+}
+
+#page3-content h1::before {
+  content: "03";
+  font-size: 3.2vw;
+  font-weight: 100;
+  position: absolute;
+  top: 10%;
+  left: -12%;
+  font-family: "silk serif";
+}
+
+#image-div-container1,
+#image-div-container2 {
+  display: flex;
+  padding: 1vw;
+}
+
+#image-div-container {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 15vh;
+}
+
+.image-div {
+  height: 38vw;
+  width: 28vw;
+  background-color: blue;
+  overflow: hidden;
+  flex-shrink: 0;
+  margin: 2vw;
+  position: relative;
+}
+.image-div img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.image-div:nth-child(1) {
+  height: 29vw;
+  width: 22vw;
+}
+#image-div-container2 > .image-div:nth-child(2) {
+  margin-top: 20vh;
+}
+
+.page3-circle1,
+.page3-circle2 {
+  height: 20vw;
+  width: 20vw;
+  border-radius: 50%;
+  margin: 30vh 0 0 25vh;
+  border: 1px solid #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.page3-circle1 .button__arrow,
+.page3-circle2 .button__arrow {
+  height: 35%;
+  width: 35%;
+}
+
+.page3-circle2 .button__arrow {
+  transform: rotate(315deg);
+}
+
+.page3-circle2 {
+  margin: 0 13.5vh 0 0;
+}
+
+.circle-in {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  scale: 0;
+  border-radius: 50%;
+  transition: all ease 0.5s;
+}
+.circle-in p {
+  color: #000000;
+  font-size: 0.85vw;
+  font-weight: 500;
+  width: 60%;
+  scale: 0;
+  transition: all ease 0.5s;
+  transition-delay: 0.3s;
+  opacity: 0;
+}
+
+.page3-circle1:hover .circle-in {
+  scale: 1;
+}
+.page3-circle1:hover p {
+  scale: 1;
+  opacity: 1;
+}
+.page3-circle2:hover .circle-in {
+  scale: 1;
+}
+.page3-circle2:hover p {
+  scale: 1;
+  opacity: 1;
+}
+
 #page4 {
   min-height: 100vh;
   width: 100%;
@@ -464,4 +592,9 @@ body::-webkit-scrollbar {
   font-size: 0.85vw;
   margin-top: -1.7vw;
   font-weight: 500;
+}
+
+._canvas_container {
+  z-index: 999999 !important;
+  pointer-events: none;
 }
