--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   overflow: auto;
   top: 0;
   user-select: none;
-  /* cursor: none !important; */
+  cursor: none !important;
 }
 
 body::-webkit-scrollbar {
