cursor  updated for less than 600px

--- a/style.css
+++ b/style.css
@@ -615,6 +615,10 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 600px) {
+  body {
+    cursor: pointer !important;
+  }
+
   #loader {
     padding: 10vh 5vw;
   }
